# pytosis

./: .gitignore  404.html  README.md  README.org  index.html  mkdocs.yml  myLeastSquaresRoutineSyntheticDataSimple.m  objects.inv  pearsonTypeIIIccdf.m  pyproject.toml  thresholdsEstimator.m
.github/workflows/: ci.yml  publish.yml
api/: index.html
docs/: generate_refs.py  index.md  reference.md
lib/: SK_3.m  leastSqPearsonTypeIIIDist.m  pearsonTypeIIIcdf.m  pearsonTypeIIIpdf.m  processSourceOnOff.m  thresholdsEstimator.m
reference/: index.html
search/: search_index.json
src/pytosis/: RFIreducer.py  __init__.py  cli.py  kurtosis.py  process_sources.py  reduction.py
src/pytosis/data/: lb.2023-06-13T0102505.fits
tutorials/: index.html
