[tool.poetry]
name = "pytosis"
version = "0.1.0"
description = "RFI reduction using spectral kurtosis."
authors = ["A. Cingoranelli <49851131+minifold@users.noreply.github.com>"]
license = "MIT"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.7"
astropy = ">=4.3.1"
scipy = ">=1.2.1"
matplotlib = ">=3.0.0"
mkdocs = "^1.5.1"
mkdocs-material = "^9.1.21"

[tool.ruff]
select = [
    "D",
]

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".
#
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
